--- a/TravelPal/Windows/AddTravelWindow.xaml
+++ b/TravelPal/Windows/AddTravelWindow.xaml
@@ -40,18 +40,19 @@
         <TextBox x:Name="txtCity" Grid.Column="2" Grid.Row="4" Margin="0,0,30,0" />
 
         <TextBlock Grid.Column="1" Grid.Row="5" FontSize ="20" Text="No. of Travelers:" Margin="0,0,10,10" HorizontalAlignment="right"   />
-        <ComboBox x:Name="cmbTravellers" Grid.Column="2" Grid.Row="5" Width="100"/>
-
+        <ComboBox x:Name="cmbTravellers" Grid.Column="2" Grid.Row="5" Width="100" HorizontalAlignment="Left"/>
         <TextBlock Grid.Column="1" Grid.Row="6" FontSize ="20" Text="Type:" Margin="0,0,10,10" HorizontalAlignment="right"    />
 
-        <ComboBox Name="cmbType" Grid.Column="2" Grid.Row="6" Margin="50,0,50,0"/>
-        <TextBox Name="txtMeetingDetails" Grid.Column="2" Grid.Row="7" FontSize ="20" Margin="0,0,10,10" Visibility="Hidden"/>
-        <CheckBox Name="xbAllInclusive" Grid.Column="2" Grid.Row="7" FontSize ="20"  Margin="0,0,10,10" Visibility="Hidden"/>
+        <ComboBox Name="cmbType" SelectionChanged="CmbType_SelectionChanged" Grid.Column="2" Grid.Row="6" Width="150" HorizontalAlignment="Left">
+            
+        </ComboBox>
+        <TextBox Name="txtMeetingDetails" Grid.Column="2" Grid.Row="6" FontSize ="20" HorizontalAlignment="Right" Visibility="Hidden"/>
+        <CheckBox Name="xbAllInclusive" Content="All Inclusive?" Grid.Column="2" Grid.Row="7" FontSize ="20"  Margin="0,0,10,10" Visibility="Hidden" />
 
-        <TextBlock Grid.Column="3" Grid.Row="3" FontSize ="20" Text="Packing List"  HorizontalAlignment="right"   />
-        <ListView Name="lstPackingList" Grid.Column="3" Grid.ColumnSpan="2" Grid.Row="4" Grid.RowSpan="4"  />
+        <TextBlock Grid.Column="3" Grid.Row="2" FontSize ="20" Text="Packing List"  HorizontalAlignment="right"   />
+        <ListView Name="lstPackingList" Grid.Column="3" Grid.ColumnSpan="2" Grid.Row="3" Grid.RowSpan="4"  />
 
-        <Button x:Name="addItemBtn" Content="Add Item" Click="addItemBtn_Click" Grid.Column="4" Grid.Row="8" FontSize="10"  HorizontalAlignment="right" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
+        <Button x:Name="addItemBtn" Content="Add Item" Click="addItemBtn_Click" Grid.Column="4" Grid.Row="7" FontSize="10"  HorizontalAlignment="right" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
         <Button x:Name="saveDetailsBtn" Content="Save" Grid.Column="2" Click="saveDetailsBtn_Click" Grid.Row="8" FontSize="10" Margin ="85,5" Width="60" HorizontalAlignment="center" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
         <Button x:Name="goBackBtn" Content="Go back to previous page" Click="goBackBtn_Click" Grid.Column="2" Grid.Row="9" FontSize="10" Margin ="85,5" Width="150" HorizontalAlignment="center" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
 
