--- a/TravelPal/Windows/AddTravelWindow.xaml
+++ b/TravelPal/Windows/AddTravelWindow.xaml
@@ -51,7 +51,13 @@
         <CheckBox Name="xbAllInclusive" Content="All Inclusive?" Grid.Column="2" Grid.Row="7" FontSize ="20"  Margin="0,0,10,10" Visibility="Hidden" />
 
         <TextBlock Grid.Column="3" Grid.Row="2" FontSize ="20" Text="Packing List"  HorizontalAlignment="right"   />
-        <ListView Name="lstPackingList" Grid.Column="3" Grid.ColumnSpan="2" Grid.Row="3" Grid.RowSpan="4"  />
+        <TextBox Name="txtPackingList" Grid.Column="3" Grid.ColumnSpan="2" Grid.Row="3" Grid.RowSpan="1"  />
+        <TextBox Name="txtPackingList2" Grid.Column="3" Grid.ColumnSpan="2" Grid.Row="4" Grid.RowSpan="1"  />
+        <TextBox Name="txtPackingList3" Grid.Column="3" Grid.ColumnSpan="2" Grid.Row="5" Grid.RowSpan="1"  />
+        <TextBox Name="txtPackingList4" Grid.Column="3" Grid.ColumnSpan="2" Grid.Row="6" Grid.RowSpan="1"  />
+        
+        
+        <CheckBox Name="xbTravelDocument" Content="Travel Document" Grid.Column="3" Grid.Row="7" FontSize ="12"  Margin="0,10,10,0"  />
 
         <Button x:Name="addItemBtn" Content="Add Item" Click="addItemBtn_Click" Grid.Column="4" Grid.Row="7" FontSize="10"  HorizontalAlignment="right" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
         <Button x:Name="saveDetailsBtn" Content="Save" Grid.Column="2" Click="saveDetailsBtn_Click" Grid.Row="8" FontSize="10" Margin ="85,5" Width="60" HorizontalAlignment="center" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
