--- a/TravelPal/Windows/TravelDetailsWindow.xaml
+++ b/TravelPal/Windows/TravelDetailsWindow.xaml
@@ -41,14 +41,18 @@
         <TextBlock Grid.Column="1" Grid.Row="5" Text="Destination"  FontSize ="14" />
         <TextBlock Grid.Column="1" Grid.Row="6" Text="Country"  FontSize ="14" />
         <TextBlock Grid.Column="1" Grid.Row="7" Text="Travelers"  FontSize ="14" />
-        <TextBlock Grid.Column="1" Grid.Row="8" Text="All Inclusive:"  FontSize ="14" />
+        <TextBlock Name="txtbAllInclusive" Grid.Column="1" Grid.Row="8" Text="All Inclusive:"  FontSize ="14" Visibility="Hidden" />
+        <TextBlock Name="txtbMeetingDetails" Grid.Column="1" Grid.Row="8" Text="Meeting Details:"  FontSize ="14" Visibility="Hidden" />
         <TextBlock Grid.Column="4" Grid.Row="4" Text="Packing List"  FontSize ="14" />
 
 
         <TextBox Name="txtDestination" Grid.Column="2" Grid.Row="5"  Width="200"/>
         <TextBox Name="txtCountry" Grid.Column="2" Grid.Row="6"  Width="200"/>
         <TextBox Name="txtTravelers" Grid.Column="2" Grid.Row="7" Width="50"/>
-        <TextBox Name="txtAllInclusive" Grid.Column="2" Grid.Row="8" Width="30"/>
+        <TextBox Name="txtAllInclusive" Grid.Column="2" Grid.Row="8" Width="30" Visibility="Hidden" />
+        <TextBox Name="txtMeetingDetails" Grid.Column="2" Grid.Row="8" Width="100" Visibility="Hidden" />
+
+
 
         <ListView Name="lstPackingList" Grid.Column="4" Grid.Row="5" Grid.RowSpan="4"  />
 
