--- a/TravelPal/Windows/AddTravelWindow.xaml
+++ b/TravelPal/Windows/AddTravelWindow.xaml
@@ -10,7 +10,8 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
             <ColumnDefinition Width="240"/>
-            <ColumnDefinition Width="300"/>
+            <ColumnDefinition Width="240"/>
+            <ColumnDefinition Width="140"/>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="20"/>
@@ -50,18 +51,18 @@
         <TextBox Name="txtMeetingDetails" Grid.Column="2" Grid.Row="7" Width="150"  FontSize ="20" HorizontalAlignment="Left"  Visibility="Hidden"/>
         <CheckBox Name="xbAllInclusive" Content="All Inclusive?" Grid.Column="2" Grid.Row="7" FontSize ="20"  Margin="0,0,10,10" Visibility="Hidden" />
 
-        <TextBlock Grid.Column="3" Grid.Row="2" FontSize ="20" Text="Packing List"  HorizontalAlignment="right"   />
-        <TextBox Name="txtPackingList" Grid.Column="3" Grid.ColumnSpan="2" Grid.Row="3" Grid.RowSpan="1"  />
-        <TextBox Name="txtPackingList2" Grid.Column="3" Grid.ColumnSpan="2" Grid.Row="4" Grid.RowSpan="1"  />
-        <TextBox Name="txtPackingList3" Grid.Column="3" Grid.ColumnSpan="2" Grid.Row="5" Grid.RowSpan="1"  />
-        <TextBox Name="txtPackingList4" Grid.Column="3" Grid.ColumnSpan="2" Grid.Row="6" Grid.RowSpan="1"  />
-        
-        
-        <CheckBox Name="xbTravelDocument" Content="Travel Document" Grid.Column="3" Grid.Row="7" FontSize ="12"  Margin="0,10,10,0"  />
+        <TextBlock Grid.Column="3" Grid.Row="2" FontSize ="20" Text="Add luggage:" Margin="0,10,0,10"   />
+        <TextBox Name="txtAddLuggage" Grid.Column="3" Grid.Row="3" Grid.RowSpan="1"  />
+        <ListView Name="lstLuggage" Grid.Column="4" Grid.ColumnSpan="2" Grid.Row="3" Grid.RowSpan="4"/>
 
-        <Button x:Name="addItemBtn" Content="Add Item" Click="addItemBtn_Click" Grid.Column="4" Grid.Row="7" FontSize="10"  HorizontalAlignment="right" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
-        <Button x:Name="saveDetailsBtn" Content="Save" Grid.Column="2" Click="saveDetailsBtn_Click" Grid.Row="8" FontSize="10" Margin ="85,5" Width="60" HorizontalAlignment="center" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
-        <Button x:Name="goBackBtn" Content="Go back to previous page" Click="goBackBtn_Click" Grid.Column="2" Grid.Row="9" FontSize="10" Margin ="85,5" Width="150" HorizontalAlignment="center" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
+
+
+        <CheckBox Name="xbTravelDocument" Content="Travel Document" Grid.Column="3" Grid.Row="5" FontSize ="12"  Margin="0,10,10,0"  />
+        <CheckBox Name="xbRequired" Content="Required?" Grid.Column="3" Grid.Row="6" FontSize ="12"  Margin="0,10,10,0"  />
+
+        <Button x:Name="addLuggageBtn" Content="Add" Click="addLuggageBtn_Click" Grid.Column="3" Grid.Row="4" FontSize="10" Width="40"  HorizontalAlignment="right" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
+        <Button x:Name="saveDetailsBtn" Content="Save" Grid.Column="2" Click="saveDetailsBtn_Click" Grid.Row="7" FontSize="10" Margin ="85,5" Width="60" HorizontalAlignment="center" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
+        <Button x:Name="goBackBtn" Content="Go back" Click="goBackBtn_Click" Grid.Column="2" Grid.Row="9"  FontSize="10" Margin ="85,5" Width="50" HorizontalAlignment="center" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
 
     </Grid>
 </Window>
