--- a/TravelPal/Windows/AddTravelWindow.xaml
+++ b/TravelPal/Windows/AddTravelWindow.xaml
@@ -54,11 +54,12 @@
         <TextBlock Grid.Column="3" Grid.Row="2" FontSize ="20" Text="Add luggage:" Margin="0,10,0,10"   />
         <TextBox Name="txtAddLuggage" Grid.Column="3" Grid.Row="3" Grid.RowSpan="1"  />
         <ListView Name="lstLuggage" Grid.Column="4" Grid.ColumnSpan="2" Grid.Row="3" Grid.RowSpan="4"/>
+        <ComboBox Name="cmbQuantity" Grid.Column="3"  Grid.Row="4" Width="40" />
 
 
 
         <CheckBox Name="xbTravelDocument" Content="Travel Document" Grid.Column="3" Grid.Row="5" FontSize ="12"  Margin="0,10,10,0"  />
-        <CheckBox Name="xbRequired" Content="Required?" Grid.Column="3" Grid.Row="6" FontSize ="12"  Margin="0,10,10,0"  />
+        <CheckBox Name="xbRequired" Content="Required?" Grid.Column="3" Grid.Row="6" FontSize ="12"  Margin="0,10,10,0" Visibility="Hidden" />
 
         <Button x:Name="addLuggageBtn" Content="Add" Click="addLuggageBtn_Click" Grid.Column="3" Grid.Row="4" FontSize="10" Width="40"  HorizontalAlignment="right" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
         <Button x:Name="saveDetailsBtn" Content="Save" Grid.Column="2" Click="saveDetailsBtn_Click" Grid.Row="7" FontSize="10" Margin ="85,5" Width="60" HorizontalAlignment="center" Background="#7B68EE" BorderBrush="#7B68EE" Foreground="#F5FFFA"/>
