--- a/TravelPal/Windows/AddTravelWindow.xaml
+++ b/TravelPal/Windows/AddTravelWindow.xaml
@@ -55,6 +55,8 @@
         <ListView Name="lstLuggage" Grid.Column="4" Grid.ColumnSpan="2" Grid.Row="3" Grid.RowSpan="4"/>
 
 
+        <Label Name="lblUsername" Grid.Column="3" Grid.ColumnSpan="2" Grid.Row="1" Grid.RowSpan="2" FontSize ="12" Content="Hello"  HorizontalAlignment="Center" Foreground="#7B68EE" FontWeight="Bold"  />
+
 
 
         <CheckBox Name="xbTravelDocument" Content="Travel Document" Grid.Column="3" Grid.Row="5" FontSize ="12"  Margin="0,10,10,0"  />
