--- a/TravelPal/Windows/TravelDetailsWindow.xaml
+++ b/TravelPal/Windows/TravelDetailsWindow.xaml
@@ -36,14 +36,14 @@
 
         <Image Source="D:\Slutprojekt_OPG1/travelpal-logo.png" Grid.Column="2" Grid.Row="1" Height="100px"/>
 
-        <Label Name="lblUsername" Grid.Column="4" Grid.Row="1" FontSize ="14" Content="Details"   HorizontalAlignment="Center" Foreground="#7B68EE" FontWeight="Bold"  />
+        <Label Name="lblUsername" Grid.Column="3" Grid.Row="1" Grid.ColumnSpan="2" FontSize ="14" Content="Hello"   Foreground="#7B68EE" FontWeight="Bold"  />
 
         <TextBlock Grid.Column="1" Grid.Row="5" Text="Destination"  FontSize ="14" />
         <TextBlock Grid.Column="1" Grid.Row="6" Text="Country"  FontSize ="14" />
         <TextBlock Grid.Column="1" Grid.Row="7" Text="Travelers"  FontSize ="14" />
         <TextBlock Name="txtbAllInclusive" Grid.Column="1" Grid.Row="8" Text="All Inclusive:"  FontSize ="14" Visibility="Hidden" />
         <TextBlock Name="txtbMeetingDetails" Grid.Column="1" Grid.Row="8" Text="Meeting Details:"  FontSize ="14" Visibility="Hidden" />
-        <TextBlock Grid.Column="4" Grid.Row="4" Text="Packing List"  FontSize ="14" />
+      
 
 
         <TextBox Name="txtDestination" Grid.Column="2" Grid.Row="5"  Width="200"/>
@@ -54,7 +54,7 @@
 
 
 
-        <ListView Name="lstPackingList" Grid.Column="4" Grid.Row="5" Grid.RowSpan="4"  />
+      
 
 
 
